propellor (5.9.0) UNRELEASED; urgency=medium

  * Avoid displaying an excessive amount of type error messages when many
    properties have been combined in a props list.
  * Added custom type error messages when Properties don't combine due to
    conflicting MetaTypes.
  * Added custom type error messages for ensureProperty and tightenTargets.
  * Use the type-errors library to detect when the type checker gets stuck
    unable to reduce type-level operations on MetaTypes, and avoid 
    displaying massive error messages in such a case.
  * But, since type-errors is a new library not available in eg Debian
    yet, added a WithTypeErrors build flag. When the library is not
    available, cabal will automatically disable that build flag,
    and it will build without the type-errors library.
  * ensureProperty: The constraints have been simplified
    to EnsurePropertyAllowed. (API change)
  * ensureProperty: The contraints have been simplified
    to TightenTargetsAllowed. (API change)
  * CheckCombinable generates a Bool. (API change)
  * Libvirt.installed: install libvirt-daemon-system
    Thanks, David Bremner

 -- Joey Hess <id@joeyh.name>  Sat, 15 Jun 2019 12:32:37 -0400

propellor (5.8.0) unstable; urgency=medium

  * Fix bug in File.containsShellSetting that replaced whole shell conffile
    content with the setting if the file did not previously contain a line
    setting the key to some value.
  * Removed inChroot, instead use hasContainerCapability FilesystemContained.
    (API change)
  * Hostname: Properties that used to not do anything in a systemd or
    docker container will now change the container's hostname,
    since it's namespaced.
  * Add User.ownsWithPrimaryGroup
    Thanks, Sean Whitton
  * Ssh.userKeys, Ssh.userKeyAt: Create .ssh directory when it does not yet
    exist.
  * Ssh.userKeyAt: When a relative filepath is provided, it's put inside
    the user's .ssh directory.
  * Fix Git.pulled always reporting a change.